[package]
name = "rust-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
panic-message = "0.3.0"
json = "0.12.4"
sea-orm = { version = "0.9.1", features = ["debug-print","sqlx-mysql", "runtime-actix-native-tls", "macros" ]}
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-core = "0.1.29"
log = "0.4.17"
futures-util = "0.3.23"

#jwt
jsonwebtoken = "8"
phf = { version = "0.11.1", features = ["macros"] }

validator = "0.16.0"
validator_derive = "0.16.0"

md5 = "0.7.0"

